--- a/tests/AspNet.Identity.RavenDB.Tests/packages.config
+++ b/tests/AspNet.Identity.RavenDB.Tests/packages.config
@@ -1,16 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.Identity.Core" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net45" />
-  <package id="RavenDB.Client" version="2.5.2750" targetFramework="net45" />
-  <package id="RavenDB.Database" version="2.5.2750" targetFramework="net45" />
-  <package id="RavenDB.Embedded" version="2.5.2750" targetFramework="net45" />
+  <package id="RavenDB.Client" version="3.0.30000" targetFramework="net45" />
+  <package id="RavenDB.Database" version="3.0.30000" targetFramework="net45" />
+  <package id="RavenDB.Embedded" version="3.0.30000" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="2.0.6.0" targetFramework="net45" />
-  <package id="xunit" version="2.0.0-alpha-build2595" targetFramework="net45" />
-  <package id="xunit.abstractions" version="2.0.0-alpha-build2595" targetFramework="net45" />
-  <package id="xunit.assert" version="2.0.0-alpha-build2595" targetFramework="net45" />
-  <package id="xunit.core" version="2.0.0-alpha-build2595" targetFramework="net45" />
+  <package id="xunit" version="2.1.0" targetFramework="net45" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.assert" version="2.1.0" targetFramework="net45" />
+  <package id="xunit.core" version="2.1.0" targetFramework="net45" />
+  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net45" />
+  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net45" />
+  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net45" />
 </packages>
